--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -8,9 +8,9 @@
 {% block main %}
 <div class="page">
   <div class="head">
-    <img src="/static/img/silhouette.jpg">
+    <img src="../static/img/silhouette.jpg">
     <div class="profile_name">
-      <h1>Alex McDoom</h1>
+      <h1>Andre Boothe</h1>
     </div>
   </div>
   <div class="p_datebox content">
@@ -18,12 +18,12 @@
   </div>
   <div class="p_content content">
     <p>
-      Username: Alex<br />
-      ID: 620025254<br />
+      Username: Andre Boothe<br />
+      ID: 620056587<br />
       Sex: Male<br />
-      Age: 23<br />
-      Highest Score: 10 000<br />
-      TDollars: 1 000 000<br />
+      Age: 22<br />
+      Highest Score: 10 <br />
+      TDollars: 1 000<br />
     </p>
   </div>
 </div>
